--- a/root/index.html
+++ b/root/index.html
@@ -43,6 +43,9 @@
 				<img src="images/icon-calculator.svg" alt="">
 			</section>
 		</main>
-		
+
+		<footer>
+			<p>Challenge by <a href="https://www.frontendmentor.io/home" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/wcyin9" target="_blank">Chenyin Wu.</a></p>
+		</footer>
 	</body>
 </html>
